[build-system]
requires = [
    "setuptools >= 40.0.4",
    "setuptools_scm >= 2.0.0",
    "wheel >= 0.29.0",
    "scikit-build >= 0.8.0",
]
build-backend = 'setuptools.build_meta'

[tool.black]
line-length = 80
target-version = ['py36', 'py37', 'py38', 'py39']
include = '\.pyi?'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.misc
    | _build
    | buck-out
    | build
    | dist
    | external
    | scripts
    | spack
    | docker
    | docs
    | pybind11
    | examples
    | kitware-cmake
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
